tests/e2e/semantics/nested_types8.error
Error: syntax error in story at line 5, column 1

5|    a = foo()[0][0]
      ^

E0100: Can't assign `int` to `string`
