tests/e2e/semantics/nested_types8.story
function foo returns List[List[int]]
    return [[0]]

a = "foo"
a = foo()[0][0]
